# video2notes

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
src/video2notes/: __init__.py  __main__.py  analyze_cli.py  cli.py  downloader.py  exports.py  llm.py  paths.py  pipeline.py  transcriber.py  ui.py
tests/: test_core.py
